samples/_failures_safe/1761712665_576b92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7ec5654.c: In function ‘main’:
./samples/SAFE/__tmp_c7ec5654.c:125:5: error: expected declaration or statement at end of input
  125 |     }
      |     ^
